// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writes cds files correctly updates index cds correctly 1`] = `
{
  "../index.cds": {
    "contents": "

using from './testProject/annotations';",
    "state": "modified",
  },
  "../testProject/annotations.cds": {
    "contents": "using AdminService as service from '../../srv/admin-service';",
    "state": "modified",
  },
}
`;

exports[`writes cds files correctly updates index cds correctly 2`] = `
{
  "": {
    "contents": "

using from './testProject/annotations';",
    "state": "modified",
  },
  "../testProject/annotations.cds": {
    "contents": "using AdminService as service from '../../srv/admin-service';",
    "state": "modified",
  },
}
`;
